--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^0.5.0+1
+  kiwi: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,6 +29,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: '>=0.10.3 <1.2.0'
+  kiwi_generator: ^0.3.1
+  mockito: ^4.0.0
 
 
 # For information on the generic Dart part of this file, see the
