--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: any
   build_runner: '>=0.10.3 <1.2.0'
   kiwi_generator: ^0.3.1
   mockito: ^4.0.0
